# portfolio

./: .editorconfig  .env.prod-template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  compose.yaml  pyproject.toml  requirements-local.txt  requirements.txt
base/: urls.py
base/settings/: base.py  local.py  production.py
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogindexpage.py  0003_blogpage.py
blog/templatetags/: navigation_tags.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_alter_resumeuser_experience.py  0002_experience_end_date_month_experience_end_date_year_and_more.py  0003_alter_skillcategory_options_and_more.py  0003_portfolio_delete_resumeuser.py  0004_alter_experience_end_date_month_and_more.py  0004_auto_20250501_0807.py  0005_auto_20250501_0809.py  0005_experience_company_url.py  0006_remove_experience_end_date_and_more.py  0007_project.py
portfolio/templates/portfolio/: landing.html  profile.html
portfolio/tests/: test_models.py  test_views.py
static/css/: base.css
templates/: _base.html  _footer.html  _header.html
templates/blog/: blog_index_page.html  blog_page.html  home_page.html
templates/portfolio/: profile.html
