[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.1.4",
    "django-extensions==4.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
]
prod = [
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
]
