[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.1.4",
    "django-extensions==4.1",
    "python-dotenv>=1.1.0",
    "wagtail>=7.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "pre-commit>=4.2.0",
]
prod = [
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
]

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool.mypy]
exclude = [
    "*/migrations/*",
    '*/tests/*',
    '.venv/*',
]
